# drop-core

./: Cargo.toml  receive_example.md  send_example.md  uniffi.toml
entities/: Cargo.toml
exchanges/common/: Cargo.toml
exchanges/receiver/: Cargo.toml  build.rs
exchanges/receiver/src/: lib.rs  receive_files.rs  receiver.udl
exchanges/sender/: Cargo.toml  build.rs
exchanges/sender/src/: lib.rs  send_files.rs  sender.udl
exchanges/sender/src/handler/: mod.rs  send_files.rs
exchanges/sender/src/send_files/: handler.rs
main/: Cargo.toml
main/src/: main.rs
src/: drop.udl  entities.rs  lib.rs
src/entities/: bag.rs  file.rs  ticket.rs
