[package]
name = "sender"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]
name = "sender"

[dependencies]
entities = { path = "../../entities" }
common = { path = "../common" }

rand = "0.9.0"
uuid = "1.16.0"
iroh = "0.34.1"
serde = "1.0.219"
anyhow = "1.0.98"
chrono = "0.4.41"
thiserror = "1.0"
iroh-base = "0.34.1"
serde_json = "1.0.140"
uniffi = { version = "0.29.1", features = [ "cli" ] }


[build-dependencies]
uniffi = { version = "0.29.1", features = [ "build" ] }
